<resources>
    <string name="app_name">Dark Mode</string>
    <string name="night_mode">Dark</string>
    <string name="night_mode_tile">Dark mode</string>
    <string name="auto">Auto</string>
    <string name="day_mode">Light</string>
    <string name="action_Settings">Settings</string>
    <string name="toggle_error">An unexpected error has occurred. Your device may not be compatible.</string>

    <!-- Info/Warn strings -->
    <string name="info_oems">Note: some device manufacturers disabled the ability to enable dark
        mode in their versions of Android, or provide their own toggle</string>
    <string name="info_devs">Note: only apps that have been updated by their developers to add a
        dark theme and follow the system setting will become dark</string>
    <string name="warn_carmode">Warning: on this version of Android, car mode must be enabled in
        order to activate dark mode. This may cause unintended behavioral changes and a persistent
        notification icon to appear</string>
    <string name="warn_disable">Warning: ensure dark mode is disabled before uninstalling this app
        or upgrading to a new version of Android</string>

    <!-- "Android Too New" dialog -->
    <string name="toonew_title">Incompatible Android Version</string>
    <string name="toonew_msg">Your version of Android already includes built-in support for
        dark mode and prevents apps from changing the setting</string>
    <string name="toonew_action">Uninstall</string>

    <!-- Shortcuts -->
    <string name="toggle_long">Toggle Dark Mode On/Off</string>
    <string name="toggle_short">On/Off</string>
    <string name="dark_long">Dark Mode On</string>
    <string name="dark_short">Dark On</string>
    <string name="light_long">Dark Mode Off</string>
    <string name="light_short">Dark Off</string>
    <string name="shortcuts_button">Add shortcuts to launcher</string>
    <string name="shortcuts_unsupported">Your current launcher or OS does not support adding shortcuts</string>
    <string name="shortcuts_explanation">Tap an icon to add it to your home screen</string>
    <string name="done">Done</string>
</resources>
