<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.andrew67.darkmode.LandingPage">
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/separatorTopMargin"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioDay"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/day_mode"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioNight"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/night_mode"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioAuto"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/auto"
                android:textSize="20sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/info_oems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_oems"
            android:layout_marginStart="@dimen/sideMargin"
            android:layout_marginTop="@dimen/textTopMargin"
            android:layout_marginEnd="@dimen/sideMargin" />

        <TextView
            android:id="@+id/info_devs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_devs"
            android:layout_marginStart="@dimen/sideMargin"
            android:layout_marginTop="@dimen/textTopMargin"
            android:layout_marginEnd="@dimen/sideMargin" />

        <TextView
            android:id="@+id/warn_carmode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warn_carmode"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="@dimen/sideMargin"
            android:layout_marginTop="@dimen/textTopMargin"
            android:layout_marginEnd="@dimen/sideMargin" />

        <TextView
            android:id="@+id/warn_disable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warn_disable"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="@dimen/sideMargin"
            android:layout_marginTop="@dimen/textTopMargin"
            android:layout_marginEnd="@dimen/sideMargin" />

        <Button
            android:id="@+id/shortcuts_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/shortcuts_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/textTopMargin" />

        <TextView
            android:id="@+id/shortcuts_unsupported"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shortcuts_unsupported"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="@dimen/sideMargin"
            android:layout_marginTop="@dimen/textTopMargin"
            android:layout_marginEnd="@dimen/sideMargin"
            android:layout_marginBottom="@dimen/separatorTopMargin" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>